[tool.poetry]
name = "exilpaper"
version = "0.1.0"
description = ""
authors = ["Virgil Exil <19keriksov@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.31.0"
textual = "^0.56.4"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
